<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.LoginActivity"
    >


<RelativeLayout
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:outlineProvider="bounds"
    android:layout_margin="10dp"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="127dp"
        android:layout_margin="15dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@android:drawable/stat_notify_chat" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="46dp"
        android:layout_marginBottom="28dp"
        android:layout_marginStart="20dp"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        android:textColorHighlight="#040303"
        android:textSize="32sp"
        android:textStyle="normal"
        android:layout_below="@+id/cardView2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_login"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/textView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_text"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_marginTop="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:passwordToggleTint="#000000"
        android:scrollbarSize="25dp"
        app:passwordToggleEnabled="true"
        android:hint="@string/password"
        android:layout_below="@+id/email_login">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:ems="15"/>
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/login_user"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="#1A191A"
        android:layout_marginStart="30dp"
        android:text="@string/login"
        app:cornerRadius="10dp"
        android:layout_below="@+id/password" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:layout_marginBottom="64dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="36dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:foregroundGravity="center"
        app:cardBackgroundColor="#D7CFD8"
        app:cardCornerRadius="20dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_below="@+id/login_user">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:gravity="center"
            android:text="@string/not_an_existing_user" />

        <TextView
            android:id="@+id/createaccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="170dp"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:text="@string/create_an_account"
            android:textAlignment="center"
            android:textColor="#070707"
            android:textSize="14sp"
            android:textStyle="bold"
            android:focusable="true" />

    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/idPBLoading"
        android:layout_width="46dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_login"
        android:layout_marginTop="17dp"
        android:layout_centerInParent="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/loading" />


</RelativeLayout>

</ScrollView>