<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.home.HomeFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/top"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:background="#090909"
            android:backgroundTint="#050505"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingTop="20dp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="239dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:text="@string/real_estate_app"
                    android:textColor="#fff"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/materialCardView2"
                    android:layout_width="70dp"
                    android:layout_height="55dp"
                    android:layout_gravity="right"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="25dp"
                    android:backgroundTint="#fff"
                    android:clickable="true"
                    android:elevation="10dp"
                    android:focusable="true"
                    android:foregroundGravity="center_vertical|center_horizontal"
                    app:cardCornerRadius="25dp"
                    app:cardElevation="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.34">


                    <ImageView
                        android:id="@+id/profile_pix"
                        android:layout_width="61dp"
                        android:layout_height="72dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="4dp"
                        android:src="@drawable/profile_headshot" />
                </com.google.android.material.card.MaterialCardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="Lagos, Nigeria"
                android:textColor="#fff"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView3"
                android:layout_width="wrap_content"
                android:layout_height="53dp"
                android:layout_gravity="center"
                android:layout_marginTop="23dp"
                android:backgroundTint="#fff"
                android:clickable="true"
                android:elevation="10dp"
                android:focusable="true"
                android:foregroundGravity="center_vertical|center_horizontal"
                app:cardCornerRadius="15dp"
                app:cardElevation="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/top">

                <SearchView
                    android:id="@+id/search_home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:iconifiedByDefault="false"
                    android:padding="4dp"
                    android:backgroundTint="@color/white"
                    android:queryHint="Search for houses"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.387"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />



            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@+id/top"
                app:layout_constraintHorizontal_bias="0.484"
                app:layout_constraintStart_toStartOf="@+id/top"
                app:layout_constraintTop_toBottomOf="@+id/materialCardView2">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="25dp"
                    android:text="@string/recommended_for_you"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/see_all"
                    android:textColor="#FDFDFD"
                    android:textSize="17sp"
                    android:textStyle="bold" />
            </LinearLayout>


        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyler_list"
            android:layout_width="match_parent"
            android:layout_height="281dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="290dp"
            android:layout_marginBottom="48dp"
            android:orientation="horizontal"
            android:textAlignment="center"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/materialCardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:listitem="@layout/item_layout" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_gravity="center | bottom"
            android:layout_marginBottom="70dp"
            android:backgroundTint="#0C0C0C"
            android:clickable="true"
            android:elevation="10dp"
            android:focusable="true"
            android:foregroundGravity="center_vertical|center_horizontal"
            android:padding="40dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="140dp"
                android:layout_height="54dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="#FBFBFB"
                android:gravity="center"
                android:text="@string/use_my_location"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"
                app:lineHeight="30sp" />

        </com.google.android.material.card.MaterialCardView>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>